# laying-grass-Project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  lint.yml  tests.yml
asserts/: Tiles.json
docs/: PLAYER.md  TECHNICAL.md
include/controllers/: Game.h  TilePlacer.h
include/models/: Board.h  BonusSquare.h  Cell.h  Player.h  Position.h  Tile.h  TileQueue.h  Types.h
include/utils/: InputValidator.h  KeyboardInput.h  Random.h  SquareCalculator.h
include/views/: Renderer.h  UI_Cli.h  UI_Qt.h
src/: main.cpp
src/controllers/: Game.cpp  TilePlacer.cpp
src/models/: Board.cpp  BonusSquare.cpp  Cell.cpp  Player.cpp  Position.cpp  Tile.cpp  TileQueue.cpp
src/utils/: InputValidator.cpp  KeyboardInput.cpp  Random.cpp  SquareCalculator.cpp
src/views/: Renderer.cpp  UI_Cli.cpp  UI_Qt.cpp
tests/: test_square_calculator.cpp
